 - added support for packages and classes named with C++ reserved words
 - static methods shadowed by non-static methods of same name now '_' suffixed
 - added 'java.lang' to --package by default
 - added isCurrentThreadAttached() method to VMEnv
 - added MANIFEST.in to exclude generated jcc/config.py (Christian Heimes)
 - passing strings for byte[] or char[] is no longer supported, use JArray

Version 2.0 -> 2.1
------------------
 - fixed bug with not checking missing module name when attempting build
 - increased jcc's java stack to 512k
 - added support for iPod/iPhone, with shared mode
 - added missing cast to jweak in call to DeleteWeakGlobalRef()
 - fixed local string ref leak in JArray<jstring> (Aaron Lav)
 - fixed local ref leak if ref for object already exists in table (Aaron Lav)
 - fixed bug with error reporting from class methods (Aaron Lav)
 - fixed bug with reporting python errors with RuntimeException when not shared
 - removed bogus storage class from template specializations (Joseph Barillari)

Version 1.9 -> 2.0
------------------
 - fixed bug with failed findClass() import
 - fixed bug http://bugzilla.osafoundation.org/show_bug.cgi?id=12127
 - added -ljvm to linux2 and sunos5 LFLAGS
 - added support for using JCC in reverse (starting from Java VM) (shared only)
 - using PythonException for reporting Python errors (shared only)
 - inserted Apache 2.0 license copyright notices
 - fixed bug with declaring array parameters in extension methods
 - added support for --module to add individual python files to resulting egg
 - JCC in reverse functional on Mac OS X and Linux
 - fixed JCC in reverse threading issues
 - JCC in reverse usable with Tomcat
 - got python stacktrace into PythonException's message
 - added 'self' property to get wrapped python object from extension wrapper
 - added headless AWT workaround to JCC's own initVM() call
 - added DEBUG_CFLAGS to setup.py to improve debug build support
 - fixed uninitialized Class class bug (parseArgs)